--- a/src/components/graphs.less
+++ b/src/components/graphs.less
@@ -5,6 +5,7 @@
   flex-direction: column;
   .vp-graphs-row {
     display: flex;
+    height: 50%;
     flex-direction: row;
     flex-grow: 1;
     .vp-graph {
